# cs4116-project

./: .dockerignore  .env  .gitignore  DEPLOYMENT_STEPS.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  env.php  main.py  package-lock.json  package.json  pyproject.toml  railway.json  railway.toml  reg_log.php  setup_db.php  test_config.php
backend/: .dockerignore  4116_DRF.json  API_CHANGES.md  BLOG_API.md  DEMO_DATA.md  Dockerfile  Dockerfile.railway  RAILWAY_DEPLOYMENT.md  changes_request.md  check_admin.py  create_test_users.py  docker-entrypoint.sh  generate_demo_data.py  my.cnf  railway.toml  test_fixed_price.py  test_simple.py
backend/accounts/: __init__.py  admin.py  admin_dashboard.py  admin_utils.py  models.py  serializers.py  service_reports.py  tests.py  tests_admin.py  tests_blog.py  tests_conversations.py  tests_images.py  tests_password.py  tests_reviews.py  tests_views.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_role_inquiry_inquirymessage_service_and_more.py  0003_review.py  0004_rename_fields.py  (+18 more)
backend/core/: mariadb_patch.py  middleware.py  settings.py  setup_db.py  test_settings.py  tests_urls.py  urls.py
frontend/: DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  Dockerfile.express  Dockerfile.node  RAILWAY_DEPLOYMENT.md  README.md  angular.json  docker-build-test.sh  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  railway.toml  server.js  test.html
frontend/public/: profilepic.avif
frontend/src/: index.html  styles.css
src/config/: config.php
(+215 files in other folders)
