[project]
name = "cs4116-project"
version = "0.1.0"
description = "TODO description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-extensions>=3.2.3",
    "django-filter>=25.1",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "markdown>=3.7",
    "mysqlclient>=2.2.7",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "pydotplus>=2.0.2",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.2.0",
]
